--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         .hero {
             height: 100vh;
             background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-                url('D:/cds/LOGO2.PNG') center/cover no-repeat;
+                url('D:/cds/LOGO2.png') center/cover no-repeat;
             display: flex;
             align-items: center;
             text-align: center;
